--- a/learnexa-api/src/main/resources/application.properties
+++ b/learnexa-api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=learnexa-api
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
