--- a/learnexa-app/app.json
+++ b/learnexa-app/app.json
@@ -37,6 +37,10 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "packagerOpts": {
+      "config": "metro.config.js",
+      "https": false
     }
   }
 }
